--- a/basic html blog/style.css
+++ b/basic html blog/style.css
@@ -1,6 +1,55 @@
+h1,
+h2,
+h3,
+h4,
+li,
+p {
+  font-family: sans-serif;
+}
+
 h1 {
   font-size: 26px;
-  font-family: sans-serif;
   text-transform: uppercase;
   font-style: italic;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+li {
+  font-size: 20px;
+}
+
+p {
+  font-size: 22px;
+  line-height: 1.5;
+}
+
+footer p {
+  font-size: 16px;
+}
+
+#author {
+  font-size: 18px;
+  font-style: italic;
+}
+
+.related-author {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.related-posts {
+  list-style: none;
 }
