--- a/basic html blog/style.css
+++ b/basic html blog/style.css
@@ -5,6 +5,13 @@ h4,
 li,
 p {
   font-family: sans-serif;
+  color: #444444;
+}
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
 }
 
 h1 {
@@ -53,3 +60,49 @@ footer p {
 .related-posts {
   list-style: none;
 }
+
+.main-header {
+  background-color: #e2e2e2;
+}
+
+aside {
+  background-color: #e2e2e2;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+/* .first-li {
+  font-weight: bold;
+} */
+
+/* li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+li:nth-child(odd) {
+  color: red;
+} */
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #1098ad;
+}
+
+a:hover {
+  color: orangered;
+  text-decoration: underline dotted;
+  font-weight: bold;
+}
+
+/* use when is clicked */
+/* a:active{
+
+} */
