--- a/challenges/style.css
+++ b/challenges/style.css
@@ -1,7 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   font-size: 12px;
   line-height: 1.4;
+}
+
+.container {
+  width: 825px;
+  margin: 50px auto;
 }
 
 .article-first {
@@ -13,6 +23,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-size: 22px;
+  padding: 15px;
 }
 
 .price {
@@ -22,6 +33,7 @@ body {
 .shipping {
   color: #b3b3b3;
   text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .moreinfo:link,
@@ -34,21 +46,32 @@ body {
   text-decoration: none;
 }
 
+.more-info {
+  margin-bottom: 20px;
+}
+
 .details-Header {
   text-transform: uppercase;
+  margin: 20px 0;
+  font-size: 16px;
 }
 
 .details-list {
   list-style-type: square;
+  margin-bottom: 20px;
+  margin-left: 15px;
 }
 
 .add-cart {
   font-size: 20px;
+  padding: 15px;
   text-transform: uppercase;
   background-color: black;
   color: white;
   border: none;
   cursor: pointer;
+  border-top: 4px solid black;
+  width: 100%;
 }
 
 .add-cart:hover,
