added styles- pseudo elements and box props

--- a/basic html blog/style.css
+++ b/basic html blog/style.css
@@ -21,6 +21,7 @@ h3 {
 
 body {
   border-top: 10px solid #1098ad;
+  position: relative;
   /* margin: 0; */
 }
 
@@ -35,8 +36,17 @@ nav {
   font-size: 18px;
 }
 
+.navBar {
+  text-align: center;
+}
+
 article {
   margin-bottom: 60px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
 }
 
 .post-img {
@@ -69,8 +79,23 @@ h1 {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 35px;
   margin-bottom: 30px;
+  position: relative;
+  /* background-color: #444444; */
+}
+
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #444444;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
 }
 
 h3 {
@@ -153,6 +178,15 @@ a:hover {
   color: orangered;
   text-decoration: underline dotted;
   font-weight: bold;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
 
 /* use when is clicked */
