--- a/challenges/style.css
+++ b/challenges/style.css
@@ -6,25 +6,53 @@
 
 body {
   font-family: sans-serif;
-  font-size: 12px;
   line-height: 1.4;
 }
 
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
 .container {
+  /*   background-color: red; */
+  display: flex;
+  gap: 40px;
+}
+
+.product-img {
+}
+
+/* PRODUCT */
+.product {
+  border: 4px solid black;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
-.article-first {
-  border: 4px solid black;
-}
-
-.page-header {
-  background-color: #f7f7f7;
+.product-title {
   text-align: center;
-  text-transform: uppercase;
   font-size: 22px;
+  text-transform: uppercase;
+  background-color: #f7f7f7;
   padding: 15px;
+}
+
+/* PRODUCT INFORMATION */
+.product-info {
+  /*  (825 - 8 - 250 - 80) / 2  */
+  /*   width: 243px; */
+  flex: 1;
+  margin-top: 20px;
+}
+
+.product-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .price {
@@ -32,134 +60,108 @@ body {
 }
 
 .shipping {
-  color: #b3b3b3;
+  font-size: 12px;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  font-weight: bold;
+  color: #777;
 }
 
-.moreinfo:link,
-.moreinfo:visited {
+.sale {
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 7px 15px;
+  display: inline-block;
+  position: absolute;
+  top: -17px;
+  left: -38px;
+
+  /*   width: 40px;
+  text-align: center; */
+}
+
+.product-description {
+  margin-bottom: 10px;
+}
+
+.more-info:link,
+.more-info:visited {
   color: black;
+  margin-bottom: 30px;
+  display: inline-block;
 }
 
-.moreinfo:hover,
+.more-info:hover,
 .more-info:active {
   text-decoration: none;
 }
 
-.more-info {
-  margin-bottom: 20px;
+.product-colors {
+  display: flex;
+  gap: 10px;
 }
 
-.color-picker {
-  margin: 20px 0;
+.color {
+  background-color: #000;
+  height: 22px;
+  width: 22px;
 }
 
-.colorOption {
-  height: 20px;
-  width: 20px;
-  display: inline-block;
-  margin-right: 10px;
+.color-blue {
+  background-color: #2f6ee2;
+}
+.color-red {
+  background-color: #ec2f2f;
+}
+.color-yellow {
+  background-color: #f0bf1e;
+}
+.color-green {
+  background-color: #90cc20;
+}
+.color-brown {
+  background-color: #885214;
 }
 
-.colorOption:last-child {
-  margin-right: 0;
+/* PRODUCT DETAILS */
+.product-details {
+  /*   width: 243px; */
+  margin-top: 20px;
+  flex: 1;
 }
 
-.color1 {
-  background-color: black;
-}
-.color2 {
-  background-color: rgb(0, 89, 255);
-}
-.color3 {
-  background-color: red;
-}
-.color4 {
-  background-color: yellow;
-}
-.color5 {
-  background-color: rgb(51, 182, 51);
-}
-.color6 {
-  background-color: rgb(97, 63, 63);
-}
-
-.details-Header {
+.details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
 }
 
 .details-list {
-  list-style-type: square;
-  margin-bottom: 20px;
-  margin-left: 15px;
+  list-style: square;
+  margin-left: 20px;
 }
 
+.details-list li {
+  margin-bottom: 10px;
+}
+
+/* BUTTON */
 .add-cart {
-  font-size: 20px;
-  padding: 15px;
-  text-transform: uppercase;
-  background-color: black;
-  color: white;
+  background-color: #000;
   border: none;
-  cursor: pointer;
-  border-top: 4px solid black;
-  width: 100%;
-}
-
-.add-cart:hover,
-.add-cart:active {
-  background-color: white;
-  color: black;
-}
-
-h2 {
-  position: relative;
-}
-
-h2::after {
-  content: "SALE";
-  background-color: red;
   color: #fff;
-  font-size: 16px;
-  font-weight: bold;
-  display: inline-block;
-  padding: 5px 10px;
-  position: absolute;
-  top: -10px;
-  left: -25px;
-  letter-spacing: 3px;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
 }
 
-.price {
-  float: left;
-}
-
-.shipping {
-  float: right;
-  margin-top: 10px;
-}
-
-.content-info {
-  clear: both;
-}
-
-.image-container {
-  float: left;
-  margin-right: 40px;
-}
-
-.cost-container {
-  float: left;
-  width: 243px;
-  display: block;
-  margin-right: 40px;
-  margin-top: 20px;
-}
-
-.details-container {
-  float: left;
-  width: 243;
-  margin-top: 20px;
+.add-cart:hover {
+  color: #000;
+  background-color: #fff;
 }
