--- a/basic html blog/style.css
+++ b/basic html blog/style.css
@@ -134,10 +134,10 @@ li:last-child {
 .related {
   list-style: none;
 }
-
+/* 
 body {
-  /* background-color: orangered; */
-}
+  background-color: orangered;
+} */
 
 /* .first-li {
   font-weight: bold;
@@ -151,9 +151,9 @@ li:last-child {
   font-style: italic;
 }
 
-li:nth-child(even) {
-  /* color: red; */
-}
+/* li:nth-child(even) {
+  color: red;
+} */
 
 /* Misconception: this won't work! */
 article p:first-child {
@@ -221,9 +221,9 @@ h1::first-letter {
   margin-right: 5px;
 }
 
-h3 + p::first-line {
-  /* color: red; */
-}
+/* h3 + p::first-line {
+  color: red;
+} */
 
 h2 {
   /* background-color: orange; */
