--- a/basic html blog/style.css
+++ b/basic html blog/style.css
@@ -26,7 +26,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -36,7 +36,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -305,7 +305,7 @@ nav p {
   font-style: normal;
 }
 
-.row {
+/* .row {
   display: flex;
   gap: 75px;
   margin-bottom: 60px;
@@ -319,6 +319,22 @@ article {
 
 aside {
   flex: 0 0 300px;
-  /* flex-basis: 300px;
-  flex-shrink: 0; */
+  flex-basis: 300px;
+  flex-shrink: 0;
+} */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1/-1;
+}
+
+.footer {
+  grid-column: 1/-1;
 }
