--- a/challenges/style.css
+++ b/challenges/style.css
@@ -15,18 +15,24 @@ body {
   clear: both;
 }
 
-.container {
-  /*   background-color: red; */
+/* .container {
+    background-color: red;
   display: flex;
   gap: 40px;
+} */
+
+.product-img {
+  width: 250px;
 }
 
 /* PRODUCT */
 .product {
   border: 4px solid black;
   width: 825px;
-  margin: 50px auto;
   position: relative;
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
 }
 
 .product-title {
@@ -35,21 +41,23 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
   padding: 15px;
+  grid-column: 1/-1;
 }
 
 /* PRODUCT INFORMATION */
 .product-info {
   /*  (825 - 8 - 250 - 80) / 2  */
   /*   width: 243px; */
-  flex: 1;
-  margin-top: 20px;
+  /* flex: 1;
+  margin-top: 20px; */
+  align-self: center;
 }
 
 .product-price {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .price {
@@ -126,8 +134,10 @@ body {
 /* PRODUCT DETAILS */
 .product-details {
   /*   width: 243px; */
-  margin-top: 20px;
-  flex: 1;
+  /* margin-top: 20px;
+  flex: 1; */
+  align-self: center;
+  /* justify-self: center; */
 }
 
 .details-title {
@@ -142,7 +152,7 @@ body {
 }
 
 .details-list li {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 /* BUTTON */
@@ -156,6 +166,7 @@ body {
   padding: 15px;
   width: 100%;
   border-top: 4px solid black;
+  grid-column: 1/-1;
 }
 
 .add-cart:hover {
