--- a/challenges/style.css
+++ b/challenges/style.css
@@ -29,6 +29,7 @@ body {
 .product {
   border: 4px solid black;
   width: 825px;
+  margin: 50px auto;
   position: relative;
   display: grid;
   grid-template-columns: 250px 1fr 1fr;
